[gd_scene load_steps=11 format=3 uid="uid://dillkuyn4m5np"]

[ext_resource type="Script" uid="uid://c3fl7by0t0n85" path="res://scripts/game.gd" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://djto8l70kmjob" path="res://scripts/camera_shake.gd" id="2_feb5d"]
[ext_resource type="Script" uid="uid://dl5cyvoc7bcws" path="res://effects/fog_effect.gd" id="3_iywne"]
[ext_resource type="Script" uid="uid://bs8ndp6mf3nj5" path="res://scenes/fireflies_effect.gd" id="3_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bix0a5ge801w3" path="res://assets/mainmenu.png" id="3_lnu2h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iywne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_instructions"]
bg_color = Color(0.1, 0.1, 0.2, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.4, 0.8, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 1, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gameover"]
bg_color = Color(0, 0, 0, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_achievement"]
bg_color = Color(1, 0.67, 0, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")
max_slimes_on_screen = 30
base_slimes_per_wave = 55
base_wave_duration = 15.0
wave_slime_count_multiplier = 1.5
wave_speed_multiplier = 1.5
wave_spawn_rate_multiplier = 1.5

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_lnu2h")
expand_mode = 1
stretch_mode = 6

[node name="FirefliesEffect" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_iywne")
position = Vector2(640, 360)
scale = Vector2(6, 6)
script = ExtResource("3_lbhrr")
firefly_count = 11
min_lifetime = 2.0
max_lifetime = 5.0
firefly_color = Color(0.337255, 0.619608, 0.992157, 1)

[node name="FogEffect" type="Node2D" parent="."]
script = ExtResource("3_iywne")
fog_density = 2.0
fog_scale = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("2_feb5d")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="TopBar" type="MarginContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopBar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="UI/TopBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "Score: 0"

[node name="HealthLabel" type="Label" parent="UI/TopBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "Health: 20/20"

[node name="WaveLabel" type="Label" parent="UI/TopBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "Wave: 0"

[node name="WaveTimerLabel" type="Label" parent="UI/TopBar/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "00:00"

[node name="PauseButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "||"

[node name="InstructionsPanel" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/InstructionsPanel"]
custom_minimum_size = Vector2(600, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_instructions")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InstructionsPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Title" type="Label" parent="UI/InstructionsPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 48
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="InstructionsText" type="Label" parent="UI/InstructionsPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
text = "Instructions"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="UI/InstructionsPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "START GAME"

[node name="PausePanel" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/PausePanel"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pause")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PausePanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="UI/PausePanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PausePanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="MenuButton" type="Button" parent="UI/PausePanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="GameOverPanel" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/GameOverPanel"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gameover")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="UI/GameOverPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="UI/GameOverPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="UI/GameOverPanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "High Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MenuButton" type="Button" parent="UI/GameOverPanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="AchievementNotification" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 220.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="UI/AchievementNotification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_achievement")

[node name="Label" type="Label" parent="UI/AchievementNotification/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Achievement unlocked!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
